--- a/StockBook-App/appsettings.json
+++ b/StockBook-App/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StockBookDb;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
