Add: Register endpoint

--- a/StockBook-App/appsettings.json
+++ b/StockBook-App/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5244",
+    "Audience": "http://localhost:5244",
+    "SignInKey" :  "karlo"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StockBookDb;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
   }
