Update: dbs migration from sqlServer tp Posgre

--- a/.gitignore
+++ b/.gitignore
@@ -376,6 +376,11 @@ dist
 dist-ssr
 *.local
 
+appsettings.json
+appsettings.Development.json
+appsettings.*.json
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
